deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pghero
  labels:
    app: pghero
spec:
  selector:
    matchLabels:
      app: pghero
  replicas: 1
  template:
    metadata:
      labels:
        app: pghero
    spec:
      containers:
      - name: pghero
        image: ankane/pghero
        imagePullPolicy: Always
        envValueFrom:
          PG_DEV_DB_PASSWORD:
            secretKeyRef:
              name: "pgherosecrets"
              key: "pghero_dev_db_password"
        envValueFrom:
          PG_STAGING_DB_PASSWORD:
            secretKeyRef:
              name: "pgherosecrets"
              key: "pghero_staging_db_password"
        envValueFrom:
          PG_PROD_DB_PASSWORD:
            secretKeyRef:
              name: "pgherosecrets"
              key: "pghero_prod_db_password"
        envValueFrom:
          PG_SANDBOX_DB_PASSWORD:
            secretKeyRef:
              name: "pgherosecrets"
              key: "pghero_sandbox_db_password"
        volumeMounts:
        - name: pghero-configmap
          mountPath: /app/config/pghero.yml
          readOnly: true
          subPath: pghero.yml
        ports:
          - name: http
            containerPort: 8080
      volumes:
      - name: pghero-configmap
        configMap:
          defaultMode: 0644
          name: pghero
