service.yml
---
# Source: confluence/templates/service.yaml
# Documentation: https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: vets-api-pghero
  namespace: platform-backend-tools
  labels:
      app_name: vets-api-pghero

  annotations:
    traefik.backend.loadbalancer.sticky: "true"

spec:
  ports:
    # port is what this service should serve on, and targetPort is the port in the container.
    - port: 8080
      name: vets-api-pghero
      targetPort: 8080
      protocol: TCP
  type: ClusterIP

  selector:
    app: vets-api-pghero
